--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* Η κάρτα εισόδου */
+/* login */
 .login-card {
     background: white;
     padding: 40px;
@@ -20,7 +20,7 @@ body {
     max-width: 400px;
 }
 
-/* Εικονίδιο και Τίτλος */
+/* Header and Title */
 .login-header {
     text-align: center;
     margin-bottom: 30px;
@@ -30,3 +30,9 @@ body {
     color: #2980b9;
     margin-bottom: 10px;
 }
+
+/* Key for role authentication entering dashboard */
+.hidden {
+    display: none !important;
+}
+
